--- a/nf_pipelines/refinement/nextflow.config
+++ b/nf_pipelines/refinement/nextflow.config
@@ -1,65 +1,53 @@
 conda.enabled = true
 
-root = "/public/compomics3/Sam"
-workDir = "$root/nextflow_denovo_refinement"
+path_to_project = "/home/samva/Doctorate/denovo_paper/DeNovo_Benchmark"
+root_data = "/home/samva/Doctorate/denovo_paper/data"
+workDir = "/home/samva/Doctorate/denovo_paper/workdir"
 
 // GENERAL VARIABLES
 // ENVIRONMENT
 params.conda_env_dir = "$HOME/miniconda3/envs"
-params.gpu_device = "cuda:1"
+params.gpu_device = "cuda:0"
 
 // FOLDERS AND VARIABLES
-// params.mgf_files = "/public/compomics3/Sam/test_denovo/mgf_reformatted/*.mgf"
-params.mgf_files = "$root/PXD028735/QExactive/mgf_reformatted/*.mgf"
+params.mgf_files = "$path_to_project/test_data/mgf/*.mgf"
 
 // OUT path
-// params.denovo_results_dir = "/public/compomics3/Sam/test_denovo/postprocessing"
-// params.denovo_results_dir = "$root/PXD028735/QExactive/postprocessing"
-//params.denovo_results_dir = "/public/compomics3/Sam/PXD028735/QExactive/postprocessing_beams"
-params.denovo_results_dir = "$root/PXD028735/QExactive/postprocessing"
+params.denovo_results_dir = "$root_data/postprocessing"
 
 // INSTANOVOPLUS
 // params.denovo_engine = "sage"
+// To edit instanovoplus configuration, edit the instanovoplus.yaml file in the configs/instanovo_v1/configs folder
+params.config_instanovoplus = "$path_to_project/configs/instanovo_v1/configs"
 
 // SPECTRALIS (INPUT PSMs)
 // Here the to be reprocessed result files should be stored (the denovo_output folder)
-// params.result_root_dir = "$root/test_denovo/beams/denovo_output"
-// params.result_root_dir = "/public/compomics3/Sam/PXD028735/QExactive/denovo_output/casanovo/beams_100"
-params.result_root_dir = "$root/PXD028735/QExactive/denovo_output"
+params.result_root_dir = "$root_data/denovo_output"
 params.denovo_engines = [
     "adanovo",
+    "casanovo",
+    "contranovo",
+    "instanovo",
+    "novob",
+    "pepnet",
     "pihelixnovo",
     "piprimenovo",
 ]
 
 // ACTIVATION VARIABLES
-params.run_instanovoplus = false
-params.run_spectralis = true
+params.run_instanovoplus = true
+params.run_spectralis = false
 
 
 // INSTANOVO PLUS VARIABLES
-// params.model_path_instanovo_diffusion = "$root/data_directory/denovo_project/checkpoints/instanovo/diffusion_checkpoint"
-// params.instanovo_plus_run_script = "$root/DeNovo_Benchmark/package/instanovo_scripts/run_instanovoplus.py"
+// Only when running InstaNovo+ v0.1.0 or lower. Default v1 so these params dont do anything.
 params.model_path_instanovo_diffusion = "/public/compomics3/Sam/denovo_checkpoints/instanovo/diffusion_checkpoint"
 params.instanovo_plus_run_script = "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/package_du/instanovo_scripts/run_instanovoplus.py"
 
 
 // SPECTRALIS VARIABLES
-// params.config_spectralis = "$root/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
-params.config_spectralis = "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
-params.spectralis_mode = "ea"
-
-
-// RESCORING VARIABLES
-root_rescoring = '/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark'
-params.casanovo_rescore_script = "$root_rescoring/scripts/infer_casanovo_scores.py"
-params.path_model_casanovo = "$root/denovo_checkpoints/casanovo/casanovo_massivekb.ckpt"
-params.path_config_casanovo = "$root_rescoring/configs/casanovo/casanovo.yaml"
-params.modification_mapping = "$root_rescoring/nf_pipelines/refinement/modification_mapping.json"
-params.psmlist_filetype = "parquet"
-params.rescoring_out = "$root/PXD028735/QExactive/postprocessing/casanovo"
-params.peak_files = "$root/PXD028735/QExactive/mgf_reformatted/LFQ_Orbitrap_DDA_QC_01.mgf"
-params.psm_lists = "/public/compomics3/Sam/PXD028735/QExactive/rescoring_beams/LFQ_Orbitrap_DDA_QC_01/for_casanovo_rescoring/LFQ_Orbitrap_DDA_QC_01.parquet"
+params.config_spectralis = "$path_to_project/configs/spectralis/spectralis_config.yaml"
+params.spectralis_mode = "ea" // 'ea' or 'rescoring'
 
 
 params.raw_extension = "mgf"
