--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -1,6 +1,7 @@
 conda.enabled = true
 
-workDir = "/public/compomics3/Sam/nextflow_denovo_tools"
+// Required for NextFlow to run.
+workDir = "/home/samva/Doctorate/denovo_paper/workdir"
 
 // USAGE //
 // params.mgf_files = "/public/compomics3/Sam/PXD028735/QExactive/mgf_reformatted/*.mgf"
@@ -13,15 +14,15 @@ workDir = "/public/compomics3/Sam/nextflow_denovo_tools"
 // - params.serializer: The serializer file (empty file)
 
 // OUTPUT FOLDER --> /denovo_output/*engine name*
-root_results = "/public/compomics3/Sam/test_denovo"
+root_results = "/home/samva/Doctorate/denovo_paper/data"
 // IN MGFs
-params.mgf_files = "/public/compomics3/Sam/test_denovo/mgf_reformatted/*.mgf"
+params.mgf_files = "/home/samva/Doctorate/denovo_paper/DeNovo_Benchmark/test_data/mgf/*.mgf"
 
 // PROCESSING INPUT RAW FILES
 // params.mgf_files = "/public/compomics3/Sam/Ben_Neely_Query/mgf/*.mgf"
 
-params.serializer = "/public/compomics3/Sam/config_files/denovo/serializer/serialize_dummy.txt"
-params.serialize = false
+params.serializer = "/home/samva/Doctorate/denovo_paper/DeNovo_Benchmark/serializer_dummy.txt"
+params.serialize = true
 
 
 // ACTIVATION VARIABLES
